# Digital-Dash

./: .env  .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json
public/: kiosk-splash.html
qt-dash/: CMakeLists.txt  README.md
qt-dash/build-windows/: CMakeCache.txt
qt-dash/qml/: CenterView.qml  ClusterView.qml  Gauge.qml  Main.qml  MetricRow.qml  StatusPill.qml
qt-dash/scripts/: apply-rpi-desktop-style.sh  install-rpi-desktop-autostart.sh  run-digital-dash-qt.sh  start-digital-dash-qt-autostart.sh
qt-dash/src/: VehicleClient.cpp  VehicleClient.h  main.cpp
server/: artwork-colors.js
server/bluetooth-service/: artwork-colors.js  package-lock.json  package.json  server.js
server/vehicle-service/: index.ts  state.json
src/: App.tsx  index.css  main.tsx  tailwind.css
src/components/: Gauge.tsx  MusicPlayer.tsx  SquircleGauge.tsx
src/screens/: CenterScreen.tsx  ClusterScreen.tsx
src/shared/: vehicleTypes.ts
src/styles/: tesla-tokens.css
src/utils/: color.ts
src/vehicle/: vehicleClient.ts
tools/can-test/: rpi_canable_test.sh
tools/hotspot/: start-hotspot.sh
tools/kiosk/: digital-dash-kiosk-session.desktop  install-cluster-kiosk.sh  launch-cluster-kiosk.sh  splash.html  start-kiosk-session.sh  start-x-kiosk-session.sh  zero-flash-kiosk.sh
tools/systemd/: digital-dash-bluetooth.service  digital-dash-ui.service  digital-dash-vehicle.service  install.sh
tools/ui-server/: server.js
tools/ytm-server/: package.json  server.js
ytm-extension/: background.js  content.js  manifest.json
(+22 files in other folders)
